--- a/build.gradle
+++ b/build.gradle
@@ -14,5 +14,7 @@ repositories {
 dependencies {
     compile group: 'org.processing', name: 'core', version: '3.3.7'
 
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.11'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
